--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,6 +8,6 @@
     <label>Password</label>
     <input type="password" class="form-control" [(ngModel)]="password" name="password">
   </div>
-  <input type="submit" class="btn btn-primary" value="Login">
+  <input type="submit" class="btn btn-primary" value="Iniciar sesión">
 </form>
 
